--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+#Logo {
+	width:40%;
+}
 
+#Logo2 {
+	width: 70%;
+}
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
